# dyxi_backend_uv

./: .env  main.py  pyproject.toml
app/: app.py
app/config/: factory_config.py  settings.py
app/core/: logging.py
app/db/: database.py
app/lib/game/adhd/: task_switch.py
app/lib/game/dyslexia/: screening.py
app/models/: roles.py  user.py  ward.py
app/routers/: auth.py  machine.py  ward.py
app/schemas/request/: loginSchema.py  registerSchema.py
app/services/: service.py  service_factory.py
app/services/auth/: auth_interface.py  authentication_service.py  cognito_service.py  jwt_service.py
app/services/general/: general_service.py
